Bug 65681 - macbook air 2,1 no sound
Summary: macbook air 2,1 no sound
Status: RESOLVED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: Sound(ALSA) (show other bugs)
Hardware: All Linux
: P1 high
Assignee: Jaroslav Kysela
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-11-24 23:21 UTC by legluondunet
Modified: 2013-12-11 21:11 UTC (History)
2 users (show)

See Also:
Kernel Version: 3.13
Subsystem:
Regression: No
Bisected commit-id:


Attachments
dmesg log file (93.90 KB, text/plain)
2013-11-24 23:21 UTC, legluondunet
Details
alsa-info.sh log result (25.45 KB, text/plain)
2013-11-25 19:34 UTC, legluondunet
Details
hp pin fix patch #1 (2.83 KB, patch)
2013-11-26 07:49 UTC, Takashi Iwai
Details | Diff
hp pin fix patch #2 (1.03 KB, patch)
2013-11-26 07:50 UTC, Takashi Iwai
Details | Diff
More fix patch (3.76 KB, patch)
2013-12-04 13:40 UTC, Takashi Iwai
Details | Diff

Description legluondunet 2013-11-24 23:21:19 UTC
Created attachment 115851 [details]
dmesg log file

The last linux kernel version still not compatible with my macbook air 2,1 sound card ALC889A from Realtek.
Comment 1 Takashi Iwai 2013-11-25 08:40:46 UTC
Please give alsa-info.sh output for more h/w details.  Run it with --no-upload option, and attach the output to here (don't paste).
Comment 2 legluondunet 2013-11-25 19:34:17 UTC
Created attachment 116071 [details]
alsa-info.sh log result
Comment 3 Takashi Iwai 2013-11-26 07:49:07 UTC
Thanks.  And what did you test?  Doesn't the sound come from both speaker and headphone?

Looking at the alsa-info.sh output, I found that the current code has a problem in the headphone pin setup.  The two patches below should fix it, at least.  Give them a try.
Comment 4 Takashi Iwai 2013-11-26 07:49:50 UTC
Created attachment 116121 [details]
hp pin fix patch #1
Comment 5 Takashi Iwai 2013-11-26 07:50:22 UTC
Created attachment 116131 [details]
hp pin fix patch #2
Comment 6 legluondunet 2013-11-27 13:43:17 UTC
Newbie question :-):
to test this patchs, I have to compile all the kernel or could I just compile the module?
Comment 7 Takashi Iwai 2013-11-29 07:27:14 UTC
You can build only modules if you know how to do it :)
If you are not sure, you need to build the whole kernel.
Comment 8 legluondunet 2013-11-29 13:09:52 UTC
I think I find an answer to my newbie question:

I will patch the 3.11 kernel source with the 2 patchs you posted:

patch -p1 > 0001-ALSA-hda-Create-Headhpone-Mic-Jack-Mode-when-really-.patch
patch -p1 > 0002-ALSA-hda-Fix-hp-mic-mode-without-VREF-bits.patch

then I will try to just compile the module, like this:

make modules SUBDIRS=directory_to_the_hda_module
Comment 9 Takashi Iwai 2013-11-29 13:19:30 UTC
This would work if the kernel tree really matches with the running kernel (including symbol versions, etc).  But it's easy to test it out.
Comment 10 Adrien Vergé 2013-12-03 16:48:56 UTC
(In reply to Takashi Iwai from comment #9)
> This would work if the kernel tree really matches with the running kernel
> (including symbol versions, etc).  But it's easy to test it out.

I applied your patches to my 3.11.9 tree, then recompiled related modules (snd_hda_intel, soundcore, snd, actually all snd_*) and installed them in /lib/modules, rebooted...

But my macbookair1,1 is still mute :(

Did these patches worked for someone with a MBA1,1 or MBA2,1?
Comment 11 Takashi Iwai 2013-12-03 17:08:59 UTC
The sound device implementation is fairly different between MBA 1,1 and 2,1.
But yes, MBA 1,1 is reported to work, at least, for the playbacks.  The mic input is broken, though.
Comment 12 Adrien Vergé 2013-12-03 17:28:24 UTC
Hi, thanks for your answer and your patches!

Do you mean the out speakers are supposed to work with vanilla linux, or with the two patches?

If the latter are needed, can you point to where the MBA 1,1 is reported to work? So I can find out what I've done wrong :)
Comment 13 Takashi Iwai 2013-12-04 07:20:25 UTC
If it works, there should be no bug report on bugzilla :)

MBA 1,1 is a different hardware, so please don't pollute here but create another bug report, if the problem still persists with the latest 3.13-rc2 tree and after double-checking the mixer status.
Comment 14 Takashi Iwai 2013-12-04 13:40:14 UTC
The output of MBA 2,1 is fixed now by the patch below.  It'll be included likely in 3.13-rc3, and then backported to stable kernels.
Comment 15 Takashi Iwai 2013-12-04 13:40:45 UTC
Created attachment 117411 [details]
More fix patch
Comment 16 legluondunet 2013-12-11 21:11:16 UTC
I'm ashamed I did not finally managed to compile the 3.13 kernel with your patchs. However I regularly installed kernels of this page:

http://kernel.ubuntu.com/ ~ kernel-ppa/mainline/daily/current /

and the version of 11 December must include your patch because for the first time I could hear the sound on my macbook 2.1 with a Linux kernel.

Thank you very much, you are my hero!

Note You need to log in before you can comment on or make changes to this bug.